--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
     <title>Affordable Mowing Sydney | Mowing, Weeding, Rubbish Removal, Gutter Cleaning &amp; More | Get a FREE quote now!</title>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
-    <h1>Affordable Mowing</h1>
-    <h2>Lawns and more</h2>
-    <p>Mowing, edging, weeding, garden clean-up, rubbish removal, gutter cleaning, small tree cutting, home cleaning, etc.</p>
-    <p>No job is too big or small!</p>
-    <h3>Get a FREE quote now</h3>
-    <form action="https://formspree.io/4loeas+7wofyypfbe9uc@sharklasers.com" method="POST">
-      <input type="text" name="name" />
-      <input type="email" name="_replyto" />
-      <input type="text" name="suburb" />
-      <input type="text" name="description" />
-      <input type="text" name="_gotcha" style="display:none" />
-      <input type="submit" value="Send">
-    </form>
-    <a class="button" href="tel:0419040990">Call us</a>
-  <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=150.87438583374026%2C-33.94791689835641%2C151.0903358459473%2C-33.81823346297343&amp;layer=transportmap" style="border: 1px solid black"></iframe>
+  <body style="/*! background-color: #1b5e20; */margin: 0px;/*! background-color: #33691e; */element\ \{\ \ color: white;/*! font-size: 50px; *//*! display: inherit; *//*! padding-left: 200px; *//*! padding-top: 70px; *//*! padding-bottom: 30px; */background-image: url('https://static.pexels.com/photos/9056/pexels-photo.jpg');background-position-y: -20%;background-size: 100%;/*! font-family: Arial; *//*! font-weight: bold; *//*! text-shadow: black 1px 1px 1px; */">
+      <div class="logo">
+    <div class="header" style="/*! background-color: #33691e; */color: white;font-size: 50px;/*! display: inherit; */padding-left: 200px;padding-top: 70px;padding-bottom: 30px;/*! background-image: url('https://static.pexels.com/photos/9056/pexels-photo.jpg'); */background-position-y: 60%;background-size: 100%;font-family: Arial;font-weight: bold;text-shadow: black 1px 1px 1px;">Affordable Mowing</div>
+        <img class="logo" src="img/logo.png" style="width: 400px;position: relative;top: -150px;">
+      </div>
+      <div class="body">
+
+        <h2>Lawns and more</h2>
+        <p>Mowing, edging, weeding, garden clean-up, rubbish removal, gutter cleaning, small tree cutting, home cleaning, etc.</p>
+        <p>No job is too big or small!</p>
+        <h3>Get a FREE quote now</h3>
+        <form action="https://formspree.io/4loeas+7wofyypfbe9uc@sharklasers.com" method="POST">
+          <input name="name" type="text">
+          <input name="_replyto" type="email">
+          <input name="suburb" type="text">
+          <input name="description" type="text">
+          <input name="_gotcha" style="display:none" type="text">
+          <input value="Send" type="submit">
+        </form>
+        <a class="button" href="tel:0419040990">Call us</a>
+        <iframe scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=150.87438583374026%2C-33.94791689835641%2C151.0903358459473%2C-33.81823346297343&amp;layer=transportmap" style="border: 1px solid black" frameborder="0" width="425" height="350"></iframe>
+      </div>
+
+
   </body>
 </html>
